--- a/AppointmentManagementService/src/main/resources/static/html/login.html
+++ b/AppointmentManagementService/src/main/resources/static/html/login.html
@@ -1,21 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
     <title>Login</title>
 </head>
 <body>
-<nav>
-    <a href="index.html">Home</a>
-    <a href="login.html">Login</a>
-    <a href="signup.html">Signup</a>
-    <a href="manage-appointments.html">Manage Appointments</a>
-    <!-- consider merging RSVP with view-appts.
-    You should be able to remove yourself from an appt, so you should also be able to see them. -->
-    <a href="rsvp.html">RSVP</a>
-    <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-appointments.html">View Your Appointments</a>
-    <a href="view-users.html">View Users</a>
-</nav>
+    <nav>
+        <a href="index.html">Home</a>
+        <a href="login.html">Login</a>
+        <a href="signup.html">Signup</a>
+        <a href="manage-appointments.html">Manage Appointments</a>
+        <!-- consider merging RSVP with view-appts.
+        You should be able to remove yourself from an appt, so you should also be able to see them. -->
+        <a href="rsvp.html">RSVP</a>
+        <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
+        <a href="view-appointments.html">View Your Appointments</a>
+        <a href="view-users.html">View Users</a>
+    </nav>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 </body>
 </html>
