Added forms for login and signup. They are NOT connected to the backend nor a JS file, just cosmetic at the moment. Credit to W3schools for the code.

--- a/AppointmentManagementService/src/main/resources/static/html/index.html
+++ b/AppointmentManagementService/src/main/resources/static/html/index.html
@@ -9,6 +9,7 @@
     <title>Appointment Management System Home</title>
 </head>
 <body>
+    <!-- CREDIT TO W3SCHOOLS FOR MUCH OF THE CODE THROUGHOUT HTML, CSS, & JS FILES.-->
     <nav>
         <a href="index.html">Home</a>
         <a href="login.html">Login</a>
