Added several frontend PoCs and containers
fixed the domain landing issue, properly casting from JSON to JS objects

--- a/AppointmentManagementService/src/main/resources/static/index.html
+++ b/AppointmentManagementService/src/main/resources/static/index.html
@@ -12,15 +12,15 @@
     <!-- CREDIT TO W3SCHOOLS FOR MUCH OF THE CODE THROUGHOUT HTML, CSS, & JS FILES.-->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <a href="index.html" class="navbar-brand">Home</a>
-        <a href="login.html" class="navbar-brand">Login</a>
-        <a href="signup.html" class="navbar-brand">Signup</a>
-        <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
+        <a href="html/login.html" class="navbar-brand">Login</a>
+        <a href="html/signup.html" class="navbar-brand">Signup</a>
+        <a href="html/manage-appointments.html" class="navbar-brand">Manage Appointments</a>
         <!-- consider merging RSVP with view-appts.
         You should be able to remove yourself from an appt, so you should also be able to see them. -->
-        <a href="rsvp.html" class="navbar-brand">RSVP</a>
+        <a href="html/rsvp.html" class="navbar-brand">RSVP</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
-        <a href="view-users.html" class="navbar-brand">View Users</a>
+        <a href="html/view-appointments.html" class="navbar-brand">View Your Appointments</a>
+        <a href="html/view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
