--- a/AppointmentManagementService/src/main/resources/static/html/login.html
+++ b/AppointmentManagementService/src/main/resources/static/html/login.html
@@ -13,7 +13,7 @@
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="index.html" class="navbar-brand">Home</a>
+        <a href="../index.html" class="navbar-brand">Home</a>
         <a href="login.html" class="navbar-brand">Login</a>
         <a href="signup.html" class="navbar-brand">Signup</a>
         <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
@@ -32,11 +32,12 @@
         </div>-->
 
         <div class="container">
-            <label for="uname"><b>Username</b></label>
+            <label ><b>Username</b>
             <input type="text" placeholder="Enter Username" name="uname" required>
-
-            <label for="psw"><b>Password</b></label>
+            </label>
+            <label><b>Password</b>
             <input type="password" placeholder="Enter Password" name="psw" required>
+            </label>
 
             <button type="submit">Login</button>
             <label>
