--- a/AppointmentManagementService/src/main/resources/static/html/rsvp.html
+++ b/AppointmentManagementService/src/main/resources/static/html/rsvp.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="index.html" class="navbar-brand">Home</a>
+        <a href="../index.html" class="navbar-brand">Home</a>
         <a href="login.html" class="navbar-brand">Login</a>
         <a href="signup.html" class="navbar-brand">Signup</a>
         <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
