--- a/AppointmentManagementService/src/main/resources/static/html/view-users.html
+++ b/AppointmentManagementService/src/main/resources/static/html/view-users.html
@@ -4,25 +4,38 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <title>View Users</title>
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+    <script src="../scripts/obj.js"></script>
+    <script src="../scripts/view-users.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="index.html" class="navbar-brand">Home</a>
-        <a href="login.html" class="navbar-brand">Login</a>
-        <a href="signup.html" class="navbar-brand">Signup</a>
-        <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
-        <!-- consider merging RSVP with view-appts.
-        You should be able to remove yourself from an appt, so you should also be able to see them. -->
-        <a href="rsvp.html" class="navbar-brand">RSVP</a>
-        <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
-        <a href="view-users.html" class="navbar-brand">View Users</a>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="../index.html" class="navbar-brand">Home</a>
+    <a href="login.html" class="navbar-brand">Login</a>
+    <a href="signup.html" class="navbar-brand">Signup</a>
+    <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
+    <!-- consider merging RSVP with view-appts.
+    You should be able to remove yourself from an appt, so you should also be able to see them. -->
+    <a href="rsvp.html" class="navbar-brand">RSVP</a>
+    <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
+    <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
+    <a href="view-users.html" class="navbar-brand">View Users</a>
+</nav>
+<table>
+    <tr>
+        <th>Id</th>
+        <th>First Name</th>
+        <th>Last Name</th>
+        <th>Age</th>
+    </tr>
+</table>
 
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
