Added JS to JSON functionality
As well as some changes to help with POST and PUT functions when ready to be implemented

--- a/AppointmentManagementService/src/main/resources/static/html/login.html
+++ b/AppointmentManagementService/src/main/resources/static/html/login.html
@@ -21,19 +21,15 @@
         You should be able to remove yourself from an appt, so you should also be able to see them. -->
         <a href="rsvp.html" class="navbar-brand">RSVP</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
+        <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
         <a href="view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
     <form action="action_page.php" method="post">
-        <!--Seems unnecessary.
-        <div class="imgcontainer">
-            <img src="img_avatar2.png" alt="Avatar" class="avatar">
-        </div>-->
 
         <div class="container">
-            <label ><b>Username</b>
-            <input type="text" placeholder="Enter Username" name="uname" required>
+            <label ><b>Email</b>
+            <input type="email" placeholder="Enter Email" name="email" required>
             </label>
             <label><b>Password</b>
             <input type="password" placeholder="Enter Password" name="psw" required>
