--- a/AppointmentManagementService/src/main/resources/static/html/rsvp.html
+++ b/AppointmentManagementService/src/main/resources/static/html/rsvp.html
@@ -18,7 +18,7 @@
         You should be able to remove yourself from an appt, so you should also be able to see them. -->
         <a href="rsvp.html" class="navbar-brand">RSVP</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
+        <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
         <a href="view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
