--- a/AppointmentManagementService/src/main/resources/static/html/view-users.html
+++ b/AppointmentManagementService/src/main/resources/static/html/view-users.html
@@ -9,8 +9,11 @@
 
     <title>View Users</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
+
     <script src="../scripts/obj.js"></script>
     <script src="../scripts/view-users.js"></script>
+    <link href="../styles/index.css" rel="stylesheet">
+
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
@@ -22,7 +25,7 @@
     You should be able to remove yourself from an appt, so you should also be able to see them. -->
     <a href="rsvp.html" class="navbar-brand">RSVP</a>
     <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
+    <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
     <a href="view-users.html" class="navbar-brand">View Users</a>
 </nav>
 <table>
@@ -30,7 +33,10 @@
         <th>Id</th>
         <th>First Name</th>
         <th>Last Name</th>
+        <th>Gender</th>
         <th>Age</th>
+        <th>Email</th>
+        <th>Phone</th>
     </tr>
 </table>
 
