--- a/AppointmentManagementService/src/main/resources/static/html/signup.html
+++ b/AppointmentManagementService/src/main/resources/static/html/signup.html
@@ -20,7 +20,7 @@
         You should be able to remove yourself from an appt, so you should also be able to see them. -->
         <a href="rsvp.html" class="navbar-brand">RSVP</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
+        <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
         <a href="view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
@@ -30,18 +30,15 @@
             <p>Please fill in this form to create an account.</p>
             <hr>
 
-            <label for="email"><b>Email</b></label>
+            <label><b>Email</b>
             <input type="text" placeholder="Enter Email" name="email" required>
-
-            <label for="psw"><b>Password</b></label>
+            </label>
+            <label><b>Password</b>
             <input type="password" placeholder="Enter Password" name="psw" required>
-
-            <label for="psw-repeat"><b>Repeat Password</b></label>
+            </label>
+            <label><b>Repeat Password</b>
             <input type="password" placeholder="Confirm Password" name="psw-confirm" required>
-
-            <!--<label>
-                <input type="checkbox" checked="checked" name="remember" style="margin-bottom:15px"> Remember me
-            </label>-->
+            </label>
 
             <div class="clearfix">
                 <button type="button" class="cancelbtn">Cancel</button>
