--- a/AppointmentManagementService/src/main/resources/static/html/view-appointments.html
+++ b/AppointmentManagementService/src/main/resources/static/html/view-appointments.html
@@ -12,6 +12,7 @@
 
     <script src="../scripts/obj.js"></script>
     <script src="../scripts/view-appointments.js"></script>
+    <link href="../styles/index.css" rel="stylesheet">
 </head>
 
 <body>
@@ -24,17 +25,23 @@
     You should be able to remove yourself from an appt, so you should also be able to see them. -->
     <a href="rsvp.html" class="navbar-brand">RSVP</a>
     <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-appointments.html" class="navbar-brand">View Your Appointments</a>
+    <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
     <a href="view-users.html" class="navbar-brand">View Users</a>
 </nav>
 
 <table>
     <tr>
         <th>Id</th>
+        <th>Appt Name</th>
+        <th>Appt Type</th>
+        <th>Description</th>
         <th>Start Time</th>
         <th>End Time</th>
+        <th>MetaData</th>
     </tr>
 </table>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
