--- a/AppointmentManagementService/src/main/resources/static/html/login.html
+++ b/AppointmentManagementService/src/main/resources/static/html/login.html
@@ -6,8 +6,13 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <link href="../styles/login.css" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
+
+    <script src="../scripts/obj.js"></script>
+    <script src="../scripts/state.js"></script>
+    <script src="../scripts/login.js"></script>
+    <link href="../styles/login.css" rel="stylesheet">
     <title>Login</title>
 </head>
 
@@ -22,7 +27,7 @@
         <a href="view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
-    <form action="action_page.php" method="post">
+    <form id="login-form">
 
         <div class="container">
             <label ><b>Email</b>
