--- a/AppointmentManagementService/src/main/resources/static/html/manage-appointments.html
+++ b/AppointmentManagementService/src/main/resources/static/html/manage-appointments.html
@@ -7,12 +7,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
-    <title>Manage Appointments</title>
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <script src="../scripts/obj.js"></script>
+    <script src="../scripts/state.js"></script>
     <script src="../scripts/manage-appointments.js"></script>
     <link href="../styles/index.css" rel="stylesheet">
+
+    <title>Manage Appointments</title>
 </head>
 <body>
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
