--- a/AppointmentManagementService/src/main/resources/static/html/signup.html
+++ b/AppointmentManagementService/src/main/resources/static/html/signup.html
@@ -4,46 +4,49 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link href="../styles/signup.css" rel="stylesheet">
 
     <title>Signup</title>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a href="../index.html" class="navbar-brand">Home</a>
-        <a href="login.html" class="navbar-brand">Login</a>
-        <a href="signup.html" class="navbar-brand">Signup</a>
-        <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
-        <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
-        <a href="view-users.html" class="navbar-brand">View Users</a>
-    </nav>
+<nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <a href="../index.html" class="navbar-brand">Home</a>
+    <a href="login.html" class="navbar-brand">Login</a>
+    <a href="signup.html" class="navbar-brand">Signup</a>
+    <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
+    <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
+    <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
+    <a href="view-users.html" class="navbar-brand">View Users</a>
+</nav>
 
-    <form action="action_page.php" style="border:1px solid #ccc">
-        <div class="container">
-            <h1>Sign Up</h1>
-            <p>Please fill in this form to create an account.</p>
-            <hr>
+<form action="action_page.php" style="border:1px solid #ccc">
+    <div class="container">
+        <h1>Sign Up</h1>
+        <p>Please fill in this form to create an account.</p>
+        <hr>
 
-            <label><b>Email</b>
+        <label><b>Email</b>
             <input type="text" placeholder="Enter Email" name="email" required>
-            </label>
-            <label><b>Password</b>
+        </label>
+        <label><b>Password</b>
             <input type="password" placeholder="Enter Password" name="psw" required>
-            </label>
-            <label><b>Repeat Password</b>
+        </label>
+        <label><b>Repeat Password</b>
             <input type="password" placeholder="Confirm Password" name="psw-confirm" required>
-            </label>
+        </label>
 
-            <div class="clearfix">
-                <button type="button" class="cancelbtn">Cancel</button>
-                <button type="submit" class="signupbtn">Sign Up</button>
-            </div>
+        <div class="clearfix">
+            <button type="button" class="cancelbtn">Cancel</button>
+            <button type="submit" class="signupbtn">Sign Up</button>
         </div>
-    </form>
+    </div>
+</form>
 
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
 </html>
