--- a/AppointmentManagementService/src/main/resources/static/html/login.html
+++ b/AppointmentManagementService/src/main/resources/static/html/login.html
@@ -33,8 +33,8 @@
             <label ><b>Email</b>
             <input type="email" placeholder="Enter Email" name="email" required>
             </label>
-            <label><b>Password</b>
-            <input type="password" placeholder="Enter Password" name="psw" required>
+            <label><b>Phone Number</b>
+            <input type="text" placeholder="Enter #" name="phone" required>
             </label>
 
             <button type="submit">Login</button>
