Changed Manage Appts page to only include user's appts.

--- a/AppointmentManagementService/src/main/resources/static/html/login.html
+++ b/AppointmentManagementService/src/main/resources/static/html/login.html
@@ -23,7 +23,7 @@
         <a href="signup.html" class="navbar-brand">Signup</a>
         <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
+        <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
         <a href="view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
