--- a/AppointmentManagementService/src/main/resources/static/index.html
+++ b/AppointmentManagementService/src/main/resources/static/index.html
@@ -16,7 +16,7 @@
         <a href="html/signup.html" class="navbar-brand">Signup</a>
         <a href="html/manage-appointments.html" class="navbar-brand">Manage Appointments</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-        <a href="html/view-appointments.html" class="navbar-brand">View All Appointments</a>
+        <a href="html/view-all-appointments.html" class="navbar-brand">View All Appointments</a>
         <a href="html/view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
