--- a/AppointmentManagementService/src/main/resources/static/html/manage-appointments.html
+++ b/AppointmentManagementService/src/main/resources/static/html/manage-appointments.html
@@ -23,7 +23,7 @@
     <a href="signup.html" class="navbar-brand">Signup</a>
     <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
     <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
+    <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
     <a href="view-users.html" class="navbar-brand">View Users</a>
 </nav>
 
@@ -39,7 +39,8 @@
         <th>Actions</th>
     </tr>
 </table>
-<button id="add-appt">Add Appointment</button>
+
+
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
         crossorigin="anonymous"></script>
