--- a/AppointmentManagementService/src/main/resources/static/html/signup.html
+++ b/AppointmentManagementService/src/main/resources/static/html/signup.html
@@ -8,6 +8,7 @@
           integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 
     <link href="../styles/signup.css" rel="stylesheet">
+
     <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>
 
     <script src="../scripts/obj.js"></script>
@@ -22,7 +23,7 @@
     <a href="signup.html" class="navbar-brand">Signup</a>
     <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
     <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-appointments.html" class="navbar-brand">View All Appointments</a>
+    <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
     <a href="view-users.html" class="navbar-brand">View Users</a>
 </nav>
 
