--- a/AppointmentManagementService/src/main/resources/static/html/signup.html
+++ b/AppointmentManagementService/src/main/resources/static/html/signup.html
@@ -17,54 +17,55 @@
     <title>Signup</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="../index.html" class="navbar-brand">Home</a>
-    <a href="login.html" class="navbar-brand">Login</a>
-    <a href="signup.html" class="navbar-brand">Signup</a>
-    <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
-    <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
-    <a href="view-users.html" class="navbar-brand">View Users</a>
-</nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a href="../index.html" class="navbar-brand">Home</a>
+        <a href="login.html" class="navbar-brand">Login</a>
+        <a href="signup.html" class="navbar-brand">Signup</a>
+        <a href="view-users.html" class="navbar-brand">View Users</a>
+        <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
+        <a href="add-appointment.html" class="navbar-brand">Add Appointment</a>
+        <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
+        <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
+    </nav>
 
-<form id="signup-form" style="border:1px solid #ccc">
-    <div class="container">
-        <h1>Sign Up</h1>
-        <p>Please fill in this form to create an account.</p>
-        <hr>
+    <form id="signup-form" style="border:1px solid #ccc">
+        <div class="container">
+            <h1>Sign Up</h1>
+            <p>Please fill in this form to create an account.</p>
+            <hr>
 
-        <label><b>Email</b>
-            <input type="text" placeholder="Enter Email" name="email" required>
-        </label>
-        <label><b>Phone Number</b>
-            <input type="tel" placeholder="XXX-XXX-XXXX" name="phone" required>
-        </label>
+            <label><b>Email</b>
+                <input type="text" placeholder="Enter Email" name="email" required>
+            </label>
+            <label><b>Phone Number</b>
+                <input type="tel" placeholder="XXX-XXX-XXXX" name="phone" required>
+            </label>
 
-        <label><b>First Name</b>
-            <input type="text" placeholder="First" name="first-name" required>
-        </label>
-        <label><b>Last Name</b>
-            <input type="text" placeholder="Last" name="last-name" required>
-        </label>
-        <label><b>Date of Birth</b>
-            <input type="date" name="birthday" required>
-        </label>
-        <label><b>Gender</b>
-            <select id="gender">
-                <option value="male">Male</option>
-                <option value="female">Female</option>
-                <option value="other">Other</option>
-            </select>
-        </label>
-        <div class="clearfix">
-            <button type="button" class="cancelbtn">Cancel</button>
-            <button type="submit" class="signupbtn">Sign Up</button>
+            <label><b>First Name</b>
+                <input type="text" placeholder="First" name="first-name" required>
+            </label>
+            <label><b>Last Name</b>
+                <input type="text" placeholder="Last" name="last-name" required>
+            </label>
+            <label><b>Date of Birth</b>
+                <input type="date" name="birthday" required>
+            </label>
+            <label><b>Gender</b>
+                <select id="gender">
+                    <option value="male">Male</option>
+                    <option value="female">Female</option>
+                    <option value="other">Other</option>
+                </select>
+            </label>
+            <div class="clearfix">
+                <button type="button" class="cancelbtn">Cancel</button>
+                <button type="submit" class="signupbtn">Sign Up</button>
+            </div>
         </div>
-    </div>
-</form>
+    </form>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 </html>
