--- a/AppointmentManagementService/src/main/resources/static/html/view-users.html
+++ b/AppointmentManagementService/src/main/resources/static/html/view-users.html
@@ -17,29 +17,31 @@
     <title>View Users</title>
 </head>
 <body>
-<nav class="navbar navbar-expand-lg navbar-light bg-light">
-    <a href="../index.html" class="navbar-brand">Home</a>
-    <a href="login.html" class="navbar-brand">Login</a>
-    <a href="signup.html" class="navbar-brand">Signup</a>
-    <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
-    <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
-    <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
-    <a href="view-users.html" class="navbar-brand">View Users</a>
-</nav>
-<table>
-    <tr>
-        <th>Id</th>
-        <th>First Name</th>
-        <th>Last Name</th>
-        <th>Gender</th>
-        <th>Age</th>
-        <th>Email</th>
-        <th>Phone</th>
-    </tr>
-</table>
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a href="../index.html" class="navbar-brand">Home</a>
+        <a href="login.html" class="navbar-brand">Login</a>
+        <a href="signup.html" class="navbar-brand">Signup</a>
+        <a href="view-users.html" class="navbar-brand">View Users</a>
+        <a href="manage-appointments.html" class="navbar-brand">Manage Appointments</a>
+        <a href="add-appointment.html" class="navbar-brand">Add Appointment</a>
+        <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
+        <a href="view-all-appointments.html" class="navbar-brand">View All Appointments</a>
+    </nav>
 
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
-        crossorigin="anonymous"></script>
+    <table class="table table-striped">
+        <tr>
+            <th>Id</th>
+            <th>First Name</th>
+            <th>Last Name</th>
+            <th>Gender</th>
+            <th>Age</th>
+            <th>Email</th>
+            <th>Phone</th>
+        </tr>
+    </table>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+            integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+            crossorigin="anonymous"></script>
 </body>
 </html>
