--- a/AppointmentManagementService/src/main/resources/static/index.html
+++ b/AppointmentManagementService/src/main/resources/static/index.html
@@ -14,10 +14,11 @@
         <a href="index.html" class="navbar-brand">Home</a>
         <a href="html/login.html" class="navbar-brand">Login</a>
         <a href="html/signup.html" class="navbar-brand">Signup</a>
+        <a href="html/view-users.html" class="navbar-brand">View Users</a>
         <a href="html/manage-appointments.html" class="navbar-brand">Manage Appointments</a>
+        <a href="html/add-appointment.html" class="navbar-brand">Add Appointment</a>
         <!-- Perhaps view appts should list the users currently RSVP'ed, whereas RSVP will only show the appts themselves.-->
         <a href="html/view-all-appointments.html" class="navbar-brand">View All Appointments</a>
-        <a href="html/view-users.html" class="navbar-brand">View Users</a>
     </nav>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
